# TaskTracker

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  server.js
mobile/: README.md  app.json  package-lock.json  package.json
