[tool.poetry]
name = "tasktrackerbackend"
version = "0.1.0"
description = "Task Tracker Backend"
authors = ["Heck"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
